# Open-Probe

./: .env.example  .gitignore  LICENSE  README.md  deepsearch.py  gradio_demo.py  lg_gradio_demo.py  pyproject.toml  requirements.txt  test_deepsearch.py
backend/: README.md  requirements.txt  start_server.py  testing_reranked_documents.json
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/models/: search.py  websocket.py
backend/app/routes/: health.py  search.py  websocket.py
backend/app/services/: deepsearch_adapter.py  search_service.py  session_manager.py  websocket_service.py
backend/app/utils/: exceptions.py  logging.py
evals/: accuracy.py  autograde_df.py  eval_tasks.py
evals/datasets/: frames_test_set_12.csv  frames_test_set_2.csv
evals/output/phase1/: deepseek-r1-671b__jina__frames_custom_set.jsonl
evals/output/phase1/graded/: deepseek-r1-671b__jina__frames_custom_set.jsonl
evals/output/phase2/: deepseek-r1-671b__jina__frames_custom_set.jsonl
evals/output/phase2/graded/: deepseek-r1-671b__jina__frames_custom_set.jsonl
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: 1.pack  10.pack  2.pack  3.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.html  _not-found.js  _not-found.js.nft.json  _not-found.rsc  _not-found_client-reference-manifest.js  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/chunks/: 592.js
frontend/.next/server/pages/: 500.html
frontend/.next/static/chunks/: 523-65cbaaff3a9933dd.js  640-db5e365d5f3fc59e.js  main-app-13474361c06eeae0.js  webpack-3cb1f3d2ccd9bdef.js
frontend/.next/static/css/: 7c41b450edcafbb4.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx
frontend/src/components/layout/: ConditionalFooter.tsx  Footer.tsx  Header.tsx
frontend/src/components/search/: FinalAnswer.tsx  SearchBox.tsx  SearchResults.tsx  StepCard.tsx  ThinkingProcess.tsx
frontend/src/hooks/: useSearch.tsx  useWebSocket.tsx
frontend/src/types/: api.ts  search.ts  websocket.ts
src/deepsearch/: README.md  __init__.py  __main__.py  cli.py  config.py  graph.py  prompt.py  rewoo_graph.py  rewoo_prompt.py  state.py  utils.py
src/deepsearch/web_search/: README.md  crawl4ai_scraper.py  jina_reranker.py  serp_search.py  source_processor.py  web_search.py
src/opendeepsearch/: __init__.py  lg_agent.py  lg_gradio_ui.py  lg_tools.py  prompts.py  wolfram_lg_tool.py
(+11 files in other folders)
