[project]
name = "openprobe_dev"
version = "0.1.0"
description = "Default template for PDM package"

dependencies = [
    "openai>=1.66.2",
    "langchain==0.3.24", 
    "langchain-core==0.3.56",
    "langgraph==0.2.76",
    "langchain-google-genai==2.1.3",
    "google-ai-generativelanguage==0.6.18",
    "python-dotenv>=0.19.0", 
    "crawl4ai @ git+https://github.com/salzubi401/crawl4ai.git@main",
    "wikipedia-api>=0.8.1",
    "torch",
    "torchvision", 
    "torchaudio",
    "boto3",
    "langchain-community",
    "langchain-openai",
    "datasets>=3.3.2",
    "fasttext-wheel>=0.9.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["src/deepsearch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.hatch.metadata]
allow-direct-references = true

#[tool.uv]
#python = "3.10"
