[project]
name = "openprobe_dev"
version = "0.2.0"
description = "Default template for PDM package"

dependencies = [
    "openai>=1.66.2",
    "langchain==0.3.24",
    "langchain-core==0.3.56",
    "langgraph==0.2.76",
    "langchain-google-genai==2.1.3",
    "langchain_experimental==0.3.5rc1",
    "google-ai-generativelanguage==0.6.18",
    "python-dotenv>=0.19.0",
    "crawl4ai @ git+https://github.com/unclecode/crawl4ai.git@main",
    "wikipedia-api>=0.8.1",
    "torch",
    "torchvision",
    "torchaudio",
    "boto3",
    "loguru",
    "langchain-community",
    "langchain-openai",
    "datasets>=3.3.2",
    "mistralai",
    "fasttext-wheel>=0.9.2",
    "rich>=14.1.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.hatch.build.targets.wheel]
packages = ["src/deepsearch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.hatch.metadata]
allow-direct-references = true

#[tool.uv]
#python = "3.10"
